--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# Application Name
 spring.application.name=gateway
+server.port=8085
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+spring.config.import=optional:configserver:http://localhost:8888
+
+
+
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.routes[0].id=SCHOOLS
+spring.cloud.gateway.routes[0].uri=http://localhost:8070
+spring.cloud.gateway.routes[0].predicates[0]=/api/v1/schools/**
+
+spring.cloud.gateway.routes[1].id=STUDENTS
+spring.cloud.gateway.routes[1].uri=http://localhost:8090
+spring.cloud.gateway.routes[1].predicates[0]=/api/v1/student/**
+
