implementation Moteur Recherche Goggle deriger Vers Ecomerce

--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -30,8 +30,8 @@ spring.config.import=optional:configserver:http://localhost:8888
 logging.level.root=info
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} -%level -%logger{60} %msg %n
 # Configuration Keycloak
-keycloak.auth-server-url=http://localhost:9090
-keycloak.realm=sayf
+keycloak.auth-server-url=http://localhost:8080
+keycloak.realm=Authentication
 keycloak.resource=bsn
 keycloak.credentials.secret=your-client-secret
 keycloak.public-client=true
@@ -39,8 +39,8 @@ keycloak.ssl-required=none
 keycloak.use-resource-role-mappings=true
 
 # Spring Security OAuth2
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/your-realm-name
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:9090/realms/your-realm-name/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/Authentication
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/Authentication/protocol/openid-connect/certs
 
 
 
