--- a/backproduit/pom.xml
+++ b/backproduit/pom.xml
@@ -45,6 +45,11 @@
                 <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                 <version>2.1.0</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.cloud</groupId>
+                <artifactId>google-cloud-vision</artifactId>
+                <version>3.18.0</version> <!-- ou dernière version -->
+            </dependency>
 
 
             <dependency>
