--- a/backproduit/src/main/resources/application.properties
+++ b/backproduit/src/main/resources/application.properties
@@ -1,33 +1,37 @@
-# Configuration du serveur
+# Server Configuration
 server.port=8089
-
-# Nom de l'application (nom affiché dans Eureka)
 spring.application.name=backproduit
 
-# Configuration de la base de données MySQL
+# Disable Config Server (since you're not using it)
+spring.cloud.config.enabled=false
+
+# Database Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/Produit?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/Produit?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 
-# JPA / Hibernate Configuration
+# JPA/Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# Intégration Eureka Client
-eureka.instance.hostname=localhost
-eureka.instance.prefer-ip-address=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
 
-# Configuration du Config Server (optionnel)
-spring.config.import=optional:configserver:http://localhost:8888
+# Keycloak
+keycloak.auth-server-url=http://localhost:8080
+keycloak.realm=Authentication
+keycloak.resource=springboot
+keycloak.public-client=true
+keycloak.credentials.secret=15jLuHn7nJtwHSKRpwi6q8iSGDStXWUP
+keycloak.ssl-required=none
 
-# Logging Configuration
-logging.level.root=info
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} -%level -%logger{60} %msg %n
-
-
+# Spring Security OAuth2
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${keycloak.auth-server-url}/realms/${keycloak.realm}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${keycloak.auth-server-url}/realms/${keycloak.realm}/protocol/openid-connect/certs
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.tn.esprit=DEBUG
